Fix layout issues on edit profile page

--- a/views/styles/admin-dashboard.css
+++ b/views/styles/admin-dashboard.css
@@ -22,6 +22,7 @@
   text-align: center;
   display: flex;
   flex-direction: column;
+  margin-top: 10%;
 }
 
 #admin-button-group > .admin-button {
