--- a/views/styles/edit-profile.css
+++ b/views/styles/edit-profile.css
@@ -1,32 +1,45 @@
 .container {
-  min-height: 100vh;
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  grid-template-rows: 35% 50% 55%;
+  grid-template-rows: minmax(15vh, 100px) auto;
 }
 
 .profile-header {
   background-color: var(--primary);
   grid-column: 1 / span 3;
-  grid-row: 1 / span 1;
+  grid-row: 1 / span 2;
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   text-align: center;
+  overflow: hidden;
+  padding-bottom: 5%;
 }
 
-.profile-picture img {
-  width: auto;
-  height: 80%;
-  border-radius: 50%;
+.profile-head {
+  grid-column: 2 / span 1;
+  display: block;
+  justify-content: center;
+}
+
+.profile-picture > img {
+  max-width: 40%;
+  background: white;
+}
+
+.profile-header img {
+  clip-path: circle(43% at center);
+  margin-top: 10%;
 }
 
 .profile-name {
   grid-column: 2 / span 1;
+  font-size: 25px;
+  font-weight: bold;
+  
 }
 
 .edit-profile-text {
   grid-column: 2 / span 1;
-  font-size: 1.5rem;
+  font-size: 20px;
 }
 
 .edit-profile-text a {
@@ -36,7 +49,7 @@
 
 .content {
   grid-column: 1 / span 3;
-  grid-row: 2 / span 1;
+  grid-row: 3 / span 1;
   display: grid;
   height: 40vh;
   grid-template-columns: repeat(3, 1fr);
@@ -62,21 +75,14 @@
 
 @media only screen and (max-width: 500px) {
 
+  nav {
+    height: 10vh;
+  }
   .container {
     display: grid;
-    height: 100vh;
     grid-template-columns: 100%;
     grid-template-rows: 10% 35%;
     margin: auto;
-  }
-
-  .navbar-placeholder {
-    display: grid;
-    height: 10vh;
-    grid-template-columns: 1fr;
-    grid-template-rows: 1fr;
-    grid-column: 1 / span 3;
-    grid-row: 1 / span 1;
   }
 
   .profile-header {
